--- a/index.html
+++ b/index.html
@@ -3,9 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Curriculum Vitae</title>
+    <link rel="shortcut icon" href="assets/flaticon/icon cv.png" type="image/x-icon">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    
+        <header>
+                <img src="assets/images/Ma photo.jpg" alt="ma photo de profil"> 
+                <h2>mon nom</h2>
+                <h2>Développeuse web junior</h2>
+        </header>
+        <main>
+                <div>
+                    <h1>A propos</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis vel corporis, perferendis expedita, sunt atque, debitis adipisci quam delectus amet reprehenderit mollitia iure officiis quos voluptatem consequatur veniam necessitatibus non.</p>
+                    <h1>Langue parlées</h1>
+                    <ul>
+                        <li>Français</li>
+                        <li>Anglais niveau collége</li>
+                        <li>Espagnol niveau collége</li>
+                    </ul>
+                    <h1>Centres d'interêt</h1>
+                    <ul>
+                        <li>L'informatique</li>
+                        <li>L'aquariophilie</li>
+                        <li>Le bricolage</li>
+                    </ul>
+                </div>
+                <div>
+                    <h1>Expériences professionnelles</h1>
+                    <p><strong>Stage vente chez VIVE LE JARDIN</strong></p>
+                    <p>Du xxx au xxx</p>
+                    <ul>
+                        <li>mission 1</li>
+                        <li>mission 2</li>
+                        <li>mission 3</li>
+                    </ul>
+                    <p><strong>Stage mechanique agricole chez GAMM VERT</strong></p>
+                    <P>Du xxx au xxx</P>
+                    <ul>
+                        <li>mission 1</li>
+                        <li>mission 2</li>
+                        <li>mission 3</li>
+                    </ul>
+                    <h1>Diplômes/formations</h1>
+                    <h1>Compétences</h1>
+                </div>
+
+        </main>
+        <footer>
+            Dernière mise à jour le...
+        </footer>      
 </body>
 </html>
