import des polices

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
                 <img src="assets/images/Ma photo.jpg" alt="ma photo de profil"> 
                 <h2>mon nom</h2>
-                <h2>Développeuse web junior</h2>
+                <h2>Développeur web junior</h2>
         </header>
         <main>
                 <div>
