--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
         <header>
                 <img src="assets/images/Ma photo.jpg" alt="ma photo de profil"> 
-                <h2>mon nom</h2>
+                <h2>Plante Matthieu</h2>
                 <h2>Développeur web junior</h2>
         </header>
         <main>
-                <div>
+                <div id="secondaire">
                     <h1>A propos</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis vel corporis, perferendis expedita, sunt atque, debitis adipisci quam delectus amet reprehenderit mollitia iure officiis quos voluptatem consequatur veniam necessitatibus non.</p>
                     <h1>Langue parlées</h1>
@@ -30,7 +30,7 @@
                         <li>Le bricolage</li>
                     </ul>
                 </div>
-                <div>
+                <div id="principal">
                     <h1>Expériences professionnelles</h1>
                     <p><strong>Stage vente chez VIVE LE JARDIN</strong></p>
                     <p>Du xxx au xxx</p>
