champs de donnée

--- a/index.html
+++ b/index.html
@@ -9,14 +9,20 @@
 </head>
 <body>
         <header>
-                <img src="assets/images/Ma photo.jpg" alt="ma photo de profil"> 
+                <img src="assets/images/ma photo.jpg" alt="ma photo de profil"> 
                 <h2>Plante Matthieu</h2>
                 <h2>Développeur web junior</h2>
         </header>
+        <nav>
+
+        </nav>
         <main>
                 <div id="secondaire">
                     <h1>A propos</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis vel corporis, perferendis expedita, sunt atque, debitis adipisci quam delectus amet reprehenderit mollitia iure officiis quos voluptatem consequatur veniam necessitatibus non.</p>
+                    <p>Actuellement résponsable de magasin et future pére de famille, je n'ai cessé au cour de ma cariére professionelle d'exercé des activités dans des domaines diverse et varié ce qui me permet d'être polyvalent au quotidient,
+                    atout mageur dans un monde en perpetuel évolutiuon. <br>
+                    Je suit actuelement une formation de dévellopeur web afin d'étendre mes domaines de compétences au monde du numérique, éssentielle pour dévelloper et pérenisé une sociéte aujourd'hui. <br>
+                    Fort de mes années d'expériences je serait sans nul doute un élément clé pour votre entreprise</p>
                     <h1>Langue parlées</h1>
                     <ul>
                         <li>Français</li>
@@ -33,21 +39,65 @@
                 <div id="principal">
                     <h1>Expériences professionnelles</h1>
                     <p><strong>Stage vente chez VIVE LE JARDIN</strong></p>
-                    <p>Du xxx au xxx</p>
+                    <p>Du 15/05/2005 au 15/06/2005</p>
                     <ul>
-                        <li>mission 1</li>
-                        <li>mission 2</li>
-                        <li>mission 3</li>
+                        <li>accueillir les clients</li>
+                        <li>entretient de l'espace de vente</li>
+                        <li>mise en rayon</li>
                     </ul>
                     <p><strong>Stage mechanique agricole chez GAMM VERT</strong></p>
-                    <P>Du xxx au xxx</P>
+                    <P>4 mois répartie sur l'anné 2007</P>
                     <ul>
-                        <li>mission 1</li>
-                        <li>mission 2</li>
-                        <li>mission 3</li>
+                        <li>entretient et réparation de matériel agricole</li>
+                        <li>entretient de l'atelier</li>
+                        <li>prise en charge de SAV</li>
+                    </ul>
+                    <p><strong>Stage ouvier agricole dnas le Maine-et-Loire</strong></p>
+                    <P>01 juillet au 31 aout 2007</P>
+                    <ul>
+                        <li>entretient des terrains agricole</li>
+                        <li>traite des vaches laitiére</li>
+                        <li>entretient des batiments avicole</li>
+                    </ul>
+                    <p><strong>formation alternance chez AGRI-PRO</strong></p>
+                    <P>decembre 2008 à juillet 2010</P>
+                    <ul>
+                        <li>accueillir les clients</li>
+                        <li>entretient de l'espace de vente</li>
+                        <li>mise en rayons</li>
+                    </ul>
+                    <p><strong>emploie à temps plein chez AGRI-PRO</strong></p>
+                    <P>aout 2010 à aujourg'hui</P>
+                    <ul>
+                        <li>passage de commande et gestion des stocks</li>
+                        <li>gestion du commerce</li>
+                        <li>développement de nouvelle gamme de produit</li>
+                        <li>mise en place du commerce internationale au sein de la société </li>
                     </ul>
                     <h1>Diplômes/formations</h1>
+                    <p><strong>Brevet des colléges</strong></p>
+                    <P>2002</P>
+                    <p>collége Auguste Lacaussade</p>
+                    <p><strong>BEP agro-équipement</strong></p>
+                    <P>2002-2004</P>
+                    <p>Lycée agricole St Joseph</p>
+                    <p><strong>BAC PRO horticulture</strong></p>
+                    <P>2004-2006</P>
+                    <p>Lycée agricole St Joseph</p>
+                    <p><strong>Bac PRO agro-équipement</strong></p>
+                    <P>2006-2008</P>
+                    <p>Lycée agricole St Joseph</p>
+                    <p><strong>Niveau BTS negociation relation client</strong></p>
+                    <P>2008-2010</P>
+                    <p>Centre de formation privé AAA</p>
                     <h1>Compétences</h1>
+                    <ul>
+                        <li>Word, Exel et PowerPoint intermédiaire</li>
+                        <li>Html et css débutant</li>
+                        <li>gérer et réaprovisioné des stocks</li>
+                        <li>accueillir et répondre aux besoins des clients</li>
+                        <li>prospecté et consolidé des partenariats avec des nouveaux fournisseurs internationaux </li>
+                    </ul>
                 </div>
 
         </main>
