insertion des liens

--- a/index.html
+++ b/index.html
@@ -9,20 +9,28 @@
 </head>
 <body>
         <header>
-                <img src="assets/images/ma photo.jpg" alt="ma photo de profil"> 
+                <img id="profil" src="assets/images/ma photo.jpg" alt="ma photo de profil"> 
                 <h2>Plante Matthieu</h2>
                 <h2>Développeur web junior</h2>
         </header>
         <nav>
-
+            <div>
+                <a href="https://www.google.com/maps/place/La+Plaine+des+Palmistes/@-21.1390072,55.6199114,14.75z/data=!4m6!3m5!1s0x2178707fca3b2271:0xfc148dc34aeffe2a!8m2!3d-21.1352535!4d55.6259077!16s%2Fg%2F1z264mhz6?entry=ttu" target="_blank" id="adresse">Rue de la République, RN3, 97431, La Réunion</a>
+            </div>
+            <div>
+                <a href="mailto:mon.mail@hotmail.com" id="mail">mon.mail@hotmail.com</a>
+            </div>
+            <div>
+                <a href="tel:+262692010203" id="numero">+262692010203</a>
+            </div>
         </nav>
         <main>
                 <div id="secondaire">
                     <h1>A propos</h1>
-                    <p>Actuellement résponsable de magasin et future pére de famille, je n'ai cessé au cour de ma cariére professionelle d'exercé des activités dans des domaines diverse et varié ce qui me permet d'être polyvalent au quotidient,
+                    <p>Actuellement résponsable de magasin et future pére de famille, je n'ai cessé au cour de ma carriére professionelle d'exercé des activités dans des domaines diverses et variés ce qui me permet d'être polyvalent au quotidient,
                     atout mageur dans un monde en perpetuel évolutiuon. <br>
-                    Je suit actuelement une formation de dévellopeur web afin d'étendre mes domaines de compétences au monde du numérique, éssentielle pour dévelloper et pérenisé une sociéte aujourd'hui. <br>
-                    Fort de mes années d'expériences je serait sans nul doute un élément clé pour votre entreprise</p>
+                    Je suis actuellement une formation de développeur web afin d'étendre mes domaines de compétences au monde du numérique, éssentielle pour développer et pérennisé une sociéte aujourd'hui. <br>
+                    Fort de mes années d'expériences je serais sans nul doute un élément clé pour votre entreprise</p>
                     <h1>Langue parlées</h1>
                     <ul>
                         <li>Français</li>
@@ -71,7 +79,7 @@
                     <ul>
                         <li>passage de commande et gestion des stocks</li>
                         <li>gestion du commerce</li>
-                        <li>développement de nouvelle gamme de produit</li>
+                        <li>développement de nouvelles gammes de produits</li>
                         <li>mise en place du commerce internationale au sein de la société </li>
                     </ul>
                     <h1>Diplômes/formations</h1>
@@ -99,10 +107,12 @@
                         <li>prospecté et consolidé des partenariats avec des nouveaux fournisseurs internationaux </li>
                     </ul>
                 </div>
-
         </main>
         <footer>
-            Dernière mise à jour le...
+                <a href="https://fr.linkedin.com/" target="_blank" rel="noopener noreferrer"> <img src="./assets/flaticon/linkedin.png" alt="logo linkedin"></a>
+                <a href="https://twitter.com/?lang=fr" target="_blank" rel="noopener noreferrer"> <img src="./assets/flaticon/twitter.png" alt="logo twitter"></a>
+                <a href="https://github.com/" target="_blank" rel="noopener noreferrer"> <img src="./assets/flaticon/signe-github.png" alt="logo github"></a>
+            <p>Dernière mise à jour le...</p>
         </footer>      
 </body>
-</html>
+</html> 
