--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
         <header>
-                <img id="profil" src="assets/images/ma photo.jpg" alt="ma photo de profil"> 
+                <a href="../Curriculum-Vitae/assets/images/ma photo.jpg" target="_blank" rel="noopener noreferrer"><img id="profil" src="assets/images/ma photo.jpg" alt="ma photo de profil"></a> 
                 <h2>Plante Matthieu</h2>
                 <h2>Développeur web junior</h2>
         </header>
